--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ body{
   margin:0;
   background:var(--bg);
   text-align:center;
-}
+} <img src="images/logo-mle.png" alt="Logo Mission Locale">
+  
 
 /* ===== MENU ===== */
 #menu{
